<resources>
    <string name="app_name" translatable="false">ATM Commission calculator</string>
    <string name="start_cost_of_bank_account">Start bank balance</string>
    <string name="finish_cost_of_bank_account">Result bank balance</string>

    <string name="action_settings">Settings</string>
    <string name="action_central_rate">Set central rate</string>
    <string name="action_clear_fields">Clear fields</string>
    <string name="title_calculation">Set all fields for calculation:</string>

    <string name="result">
        Actual rate: 0.00 \nLost sum: 0.00\nExchange: 0.00%
    </string>
    <string name="set_local_exchange_rate">Set exchange rate of the central bank:</string>
    <string name="central_bank_exchange_rate">Exchange rate of the central bank</string>
    <string name="actual_rate">Actual rate</string>
    <string name="lost_sum">Lost sum</string>
    <string name="exchange">Exchange</string>

    <string name="calculate_result">
        Actual rate: %1$.2f \nLost sum: %2$.2f \nExchange: %3$.2f
    </string>

    <string name="amount_from_atm">Amount from ATM in local currency</string>

    <string name="null_amount" translatable="false">0.00</string>
</resources>
